@@ -59,8 +59,13 @@ module OpenSSL
       const_set(name, klass)
     }
 
-    # This class is only provided for backwards compatibility.  Use OpenSSL::Digest in the future.
-    class Digest < Digest
+    # This class is only provided for backwards compatibility.
+    #
+    # Use OpenSSL::Digest in the future.
+    class Digest < Digest # :nodoc:
+      # Deprecated.
+      #
+      # See OpenSSL::Digest.new
       def initialize(*args)
         # add warning
         super(*args)
